--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
             <div class="col-lg-4 col-md-6 mb-5 mb-lg-0" style="text-align: center;">
                 <i class="bi bi-telephone-fill display-4 mb-3" style="color: #FFFFFF;"></i>
-                <h4 class="mb-3" style="font-family: 'Playfair Display', serif;">Telefone & E-mail</h4>
+                <h4 class="mb-3" style="font-family: 'Playfair Display', serif;">Telefone e E-mail</h4>
                 <p class="text-white-50">
                     Fale conosco para dúvidas ou reservas.
                 </p>
@@ -430,6 +430,28 @@
         </div>
     </div>
 </section>
+
+<footer class="py-4" style="background-color: var(--darker-bg);">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                <small class="text-white-50">&copy; 2025 Morada Café. Todos os direitos reservados.</small>
+            </div>
+            
+            <div class="col-md-6 text-center text-md-end">
+                <a href="#" class="text-white-50 ms-3">
+                    <i class="bi bi-instagram fs-5"></i>
+                </a>
+                <a href="#" class="text-white-50 ms-3">
+                    <i class="bi bi-facebook fs-5"></i>
+                </a>
+                <a href="#" class="text-white-50 ms-3">
+                    <i class="bi bi-tiktok fs-5"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
     
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
